tests/baselines/reference/jsdocDisallowedInTypescript.errors.txt
tests/cases/conformance/jsdoc/jsdocDisallowedInTypescript.ts(11,12): error TS2554: Expected 1 arguments, but got 2.
tests/cases/conformance/jsdoc/jsdocDisallowedInTypescript.ts(16,5): error TS2322: Type 'boolean[]' is not assignable to type 'boolean | undefined'.
  Type 'boolean[]' is not assignable to type 'false'.
tests/cases/conformance/jsdoc/jsdocDisallowedInTypescript.ts(16,15): error TS8028: JSDoc '...' may only appear in the last parameter of a signature.
tests/cases/conformance/jsdoc/jsdocDisallowedInTypescript.ts(19,5): error TS2322: Type 'undefined' is not assignable to type 'never'.
tests/cases/conformance/jsdoc/jsdocDisallowedInTypescript.ts(19,17): error TS2322: Type 'number' is not assignable to type 'boolean'.
tests/cases/conformance/jsdoc/jsdocDisallowedInTypescript.ts(19,25): error TS1110: Type expected.
tests/cases/conformance/jsdoc/jsdocDisallowedInTypescript.ts(24,17): error TS8028: JSDoc '...' may only appear in the last parameter of a signature.


==== tests/cases/conformance/jsdoc/jsdocDisallowedInTypescript.ts (7 errors) ====
    // grammar error from checker
    var ara: Array.<number> = [1,2,3];
    
    function f(x: ?number, y: Array.<number>) {
        return x ? x + y[1] : y[0];
    }
    function hof(ctor: function(new: number, string)) {
        return new ctor('hi');
    }
    function hof2(f: function(this: number, string): string) {
        return f(12, 'hullo');
               ~~~~~~~~~~~~~~
!!! error TS2554: Expected 1 arguments, but got 2.
    }
    var whatevs: * = 1001;
    var ques: ? = 'what';
    var g: function(number, number): number = (n,m) => n + m;
    var variadic: ...boolean = [true, false, true];
        ~~~~~~~~
!!! error TS2322: Type 'boolean[]' is not assignable to type 'boolean | undefined'.
!!! error TS2322:   Type 'boolean[]' is not assignable to type 'false'.
                  ~~~~~~~~~~
!!! error TS8028: JSDoc '...' may only appear in the last parameter of a signature.
    var most: !string = 'definite';
    var postfixdef: number! = 101;
    var postfixopt: number? = undefined;
        ~~~~~~~~~~
!!! error TS2322: Type 'undefined' is not assignable to type 'never'.
                    ~~~~~~
!!! error TS2322: Type 'number' is not assignable to type 'boolean'.
                            ~
!!! error TS1110: Type expected.
    
    var nns: Array<?number>;
    var dns: Array<!number>;
    var anys: Array<*>;
    var vars: Array<...number>;
                    ~~~~~~~~~
!!! error TS8028: JSDoc '...' may only appear in the last parameter of a signature.
    
    